docs: Stage 2-a beachhead result, Ant-topology corrections, and the deferred findings map